# serializer version: 1
# name: test_setting_up_config[False]
  set({
    'air_quality',
    'alarm_control_panel',
    'api',
    'application_credentials',
    'auth',
    'battery',
    'binary_sensor',
    'button',
    'camera',
    'climate',
    'config',
    'conversation',
    'cover',
    'date',
    'datetime',
    'device_tracker',
    'diagnostics',
    'door',
    'doorbell',
    'event',
    'fan',
    'garage_door',
    'gate',
    'geo_location',
    'group',
    'homeassistant',
    'homeassistant.scene',
    'http',
    'humidifier',
    'humidity',
    'illuminance',
    'image',
    'image_processing',
    'infrared',
    'intent',
    'lawn_mower',
    'light',
    'llm',
    'lock',
    'logger',
    'media_player',
    'moisture',
    'motion',
    'network',
    'notify',
    'number',
    'occupancy',
    'person',
    'power',
    'radio_frequency',
    'remote',
    'repairs',
    'scene',
    'select',
    'sensor',
    'siren',
    'switch',
    'system_health',
    'system_log',
    'tag',
    'temperature',
    'text',
    'time',
    'update',
    'vacuum',
    'valve',
    'vibration',
    'water_heater',
    'weather',
    'web_rtc',
    'webhook',
    'websocket_api',
    'window',
    'zone',
  })
# ---
# name: test_setting_up_empty_config[False]
  set({
    'air_quality',
    'alarm_control_panel',
    'api',
    'application_credentials',
    'auth',
    'battery',
    'binary_sensor',
    'button',
    'camera',
    'climate',
    'config',
    'conversation',
    'cover',
    'date',
    'datetime',
    'device_tracker',
    'diagnostics',
    'door',
    'doorbell',
    'event',
    'fan',
    'garage_door',
    'gate',
    'geo_location',
    'homeassistant',
    'homeassistant.scene',
    'http',
    'humidifier',
    'humidity',
    'illuminance',
    'image',
    'image_processing',
    'infrared',
    'intent',
    'lawn_mower',
    'light',
    'llm',
    'lock',
    'logger',
    'media_player',
    'moisture',
    'motion',
    'network',
    'notify',
    'number',
    'occupancy',
    'person',
    'power',
    'radio_frequency',
    'remote',
    'repairs',
    'scene',
    'select',
    'sensor',
    'siren',
    'switch',
    'system_health',
    'system_log',
    'tag',
    'temperature',
    'text',
    'time',
    'update',
    'vacuum',
    'valve',
    'vibration',
    'water_heater',
    'weather',
    'web_rtc',
    'webhook',
    'websocket_api',
    'window',
    'zone',
  })
# ---
